# stock-website-crawler

./: .env.example  .gitignore  :null}],  API_COMPARISON_EODHD_EXAMPLE.md  HAO123_COMPARISON_EASTMONEY_EXAMPLE.md  MCP_SERVICE_TEMPLATE.md  PARSER_REFACTORING_DESIGN.md  PROJECT_CLEANUP_SUMMARY.md  README.md  REFACTOR_ROADMAP.md  RSS_API_COMPARISON_TEMPLATE.md  SKILLS_USAGE_GUIDE.md  debug-extract-examples.js  debug-find-all-links.js  debug-measures-page.js  defensive_fixed_income_strategy.py  fetch-api-links.js  full_defensive_fixed_income_backtest.py  generate-mcp-md.js  login.js  massive-validation-report.md  new.txt  optimized_defensive_backtest.py  optimized_defensive_fixed_income_strategy.py  package-lock.json  result_05_smallcap_defense_v2_failure_analysis.md  run-crawler-loop-nohao123.sh  run-crawler-loop.sh  simple_fixed_income_test.py  smallcap_v3_backtest_guide.md  smallcap_v3_local_backtest.py  test-bailian.js  test-single-api.js  test_joinquant_connection.py  多因子选股_notebook梳理.md  多因子选股研究总结报告.md  机器学习策略总结与实盘指南.md  根目录MD文档审阅结论.md  根目录MD文档总结.md  聚宽_notebook_实测结果汇总.md  (+1 more)
jk2bt-main/: .gitignore  FINAL_ACCEPTANCE_REPORT.md  FINAL_FIX_SUMMARY.md  P1_ERROR_HANDLING_IMPROVEMENTS.md  P1_TASK_REPORT.md  README.md  RELEASE_READY_REPORT.md  SCANNER_FIXES_REPORT.md  activate_env.sh  batch_compatibility_test.py  generate_strategies_registry.py  pyproject.toml  pytest.ini  run_all_tests.py  run_daily_strategy_batch.py  run_strategies_parallel.py  run_tests.py  strategy_scanner.py  test_scanner_fixes.py  test_scanner_fixes_quick.py  test_simple_strategy.txt  test_summary.sh  timer_rules.py  validation_config.yaml  validation_report.md
jk2bt-main/config/: default.json
jk2bt-main/data/: jk2bt.duckdb
jk2bt-main/docs/: P1_completion_summary.md  README.md  api_scanner_fix_report.md  api_support_whitelist.md  architecture_review.md  cache_fix_report.md  cache_technical_solution_v2.md  compatibility_report_v1.0.md  installation_validation.md  offline_data_package_plan.md  strategy_support_matrix.md
jk2bt-main/factors/: __init__.py  barra_factors.py  base.py  custom_factors.py  data_sources.py  factor_zoo.py  finance_tables.py  financial_metrics.py  fundamentals.py  growth.py  preprocess.py  qlib_alpha.py  quality.py  risk.py  technical.py  valuation.py
jk2bt-main/finance_data/: __init__.py  cashflow.py  company_info.py  dividend.py  finance_tables.py  forecast.py  income.py  index_fundamentals_robust.py  macro.py  margin.py  share_change.py  shareholder.py  unlock.py
jk2bt-main/indicators/: __init__.py  breakthrough_signals.py  cross_signals.py  divergence_signals.py  extreme_signals.py  fields.py  market_sentiment.py  rsrs.py
jk2bt-main/jk2bt/: __init__.py  asset_router.py  cli.py  dependency_checker.py  runtime_io.py
jk2bt-main/logs/: strategy_nav.csv  trade_log.txt
jk2bt-main/market_data/: __init__.py  call_auction.py  concept.py  conversion_bond.py  etf.py  fund_of.py  futures.py  futures_data.py  index.py  lof.py  (+8 more)
(+13361 files in other folders)
