[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jk2bt"
version = "1.0.0"
description = "聚宽策略本地运行框架 - 让聚宽平台的策略代码无需修改就能在本地运行"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "JK2BT Team"}
]
keywords = ["quant", "backtrader", "joinquant", "trading"]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "backtrader>=1.9.76",
    "akshare>=1.10.0",
    "duckdb>=0.8.0",
    "statsmodels>=0.14.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
]

[project.scripts]
jk2bt-run = "jk2bt.cli:run_strategy_main"
jk2bt-prewarm = "jk2bt.cli:prewarm_main"
jk2bt-validate = "jk2bt.cli:validate_cache_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
full = [
    "scikit-learn>=1.0.0",
    "xgboost>=1.6.0",
    "lightgbm>=3.3.0",
    "statsmodels>=0.13.0",
    "scipy>=1.8.0",
]
# 技术分析依赖（可选，部分策略需要）
ta = [
    "talib-binary>=0.4.28",  # 预编译版本，避免编译问题
]

# 显式指定要打包的模块，避免重复打包
# src只包含兼容桥接文件，不包含子目录（子目录在jk2bt内已存在）
[tool.setuptools]
packages = ["jk2bt", "jk2bt.api", "jk2bt.api._internal", "jk2bt.core", "jk2bt.data_access", "jk2bt.data_access.examples", "jk2bt.db", "jk2bt.factors", "jk2bt.finance_data", "jk2bt.indicators", "jk2bt.market_data", "jk2bt.risk", "jk2bt.signals", "jk2bt.strategy", "jk2bt.utils", "jk2bt.validation", "tools", "tools.data", "tools.offline_data", "tools.validation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["jk2bt"]
omit = ["tests/*", "*/__pycache__/*"]
